<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tainan">Tainan</string>
    <string name="sunny">Sunny</string>
    <string name="max_32">Max : </string>
    <string name="aqi_000">AQI:</string>
    <string name="today">Today</string>
    <string name="next_10_days"><![CDATA[Next 10 days >]]></string>
    <string name="min_20">Min : </string>
    <string name="tomorrow">Tomorrow</string>
    <string name="sun">Sun</string>
    <string name="_10_days_weather">10 Days Weather</string>
    <string name="map">Map</string>
    <string name="add_city">Add City</string>
    <string name="add">Add</string>
    <string name="manger_city">manger city</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="rain">Rain</string>
    <string name="Sunny">Sunny</string>
    <string name="cloud">" Cloud"</string>
    <string name="Rain">Rain</string>
    <string name="rain1">Rain</string>
    <string name="rain2">Rain</string>
    <string name="rain3">Rain</string>
    <string name="rain4">Rain</string>
    <string name="rain5">Rain</string>
    <string name="rain6">Rain</string>
</resources>