<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/sunnyimg">

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="00"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typ" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="27dp"
        android:layout_height="67dp"
        android:layout_marginEnd="140dp"
        android:text="°"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/temp"
        app:layout_constraintVertical_bias="0.354" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="40dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/loctaion"
        app:layout_constraintEnd_toStartOf="@+id/cityName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:layout_marginEnd="132dp"
        android:text="@string/tainan"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="12dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:text="°"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mat"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="15dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:text="°"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/math"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/sunny"
        android:layout_width="153dp"
        android:layout_height="161dp"
        android:layout_marginTop="24dp"
        app:lottie_rawRes="@raw/sun"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/typ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sunny"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunny" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="394dp"
        android:layout_height="116dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/white_background"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mintemp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/mintemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/min_20"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/maxtemp"
        app:layout_constraintTop_toBottomOf="@+id/maxtemp" />

    <TextView
        android:id="@+id/maxtemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/max_32"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <TextView
        android:id="@+id/math"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="32"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/maxtemp"
        app:layout_constraintTop_toTopOf="@+id/maxtemp" />

    <TextView
        android:id="@+id/mat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="20"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/mintemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mintemp"
        app:layout_constraintTop_toBottomOf="@+id/math"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/aqi"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginBottom="60dp"
        android:text="@string/aqi_000"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/aqi_math"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/aqi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/aqi"
        app:layout_constraintTop_toTopOf="@+id/aqi"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/daylink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_10_days"
        android:textColor="#2137BD"
        app:layout_constraintBottom_toBottomOf="@+id/today"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toEndOf="@+id/today" />


</androidx.constraintlayout.widget.ConstraintLayout>
